--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,28 @@
 }
 
 /* shared style  */
+.secondary-bg {
+    background-color: #FFF8F3;
+}
+
 .text-primary {
     color: rgb(253, 110, 10);
 }
 
 .drak-2 {
     color: rgb(71, 71, 71);
+}
+
+.section-title {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description {
+    color: rgb(117, 117, 117);
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .btn-primary {
@@ -28,11 +44,13 @@
     font-weight: bold;
     border: none;
 }
-.header{
-   background-image: url(../images/developer.png), url(../images/header_bg.png);
-   background-repeat: no-repeat;
-   background-position: top left, bottom right;
+
+.header {
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
+
 /* nav style */
 nav {
     display: flex;
@@ -65,15 +83,17 @@ nav li a {
 }
 
 /* banner styles */
-.banner{
+.banner {
     display: flex;
     justify-content: space-between;
     margin: 0 35px 0 200px;
 
 }
-.banner-content{
+
+.banner-content {
     max-width: 580px;
 }
+
 .banner-greetings {
     color: rgb(71, 71, 71);
     font-size: 45px;
@@ -101,4 +121,23 @@ nav li a {
     right: 38px;
     top: 161px;
     bottom: 3419px; */
+}
+/* main styles  */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about styles */
+.about {
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.item-description{
+    font-weight: 600;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
 }
