--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,11 @@
     border: none;
 }
 
+.text-center {
+    text-align: center;
+}
+
+/* header  */
 .header {
     background-image: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
@@ -122,22 +127,44 @@ nav li a {
     top: 161px;
     bottom: 3419px; */
 }
+
 /* main styles  */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+main section {
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* about styles */
 .about {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+
 }
-.item-description{
+
+.item-description {
     font-weight: 600;
 }
-.about-items{
+
+.about-items {
     display: flex;
     justify-content: space-around;
+}
+
+/* skills section  */
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
 }
