--- a/styles/style.css
+++ b/styles/style.css
@@ -168,3 +168,41 @@ main section {
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     background: rgb(255, 255, 255);
 }
+
+/* resume  */
+.resume-container {
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 24px;
+}
+
+.resume-column-title {
+    color: rgb(71, 71, 71);
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 20px;
+
+}
+
+.experience-title {
+    color: rgb(71, 71, 71);
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.experience-sub-title {
+    color: rgb(117, 117, 117);
+    font-size: 20px;
+    font-weight: 600;
+
+}
+
+.experience-description {
+    color: rgb(117, 117, 117);
+    font-size: 16px;
+    font-weight: 400;
+
+}
+.resume-download-btn{
+    margin-top: 28px;
+}
