--- a/styles/style.css
+++ b/styles/style.css
@@ -203,6 +203,34 @@ main section {
     font-weight: 400;
 
 }
-.resume-download-btn{
+
+.resume-download-btn {
     margin-top: 28px;
+}
+
+/* footer  */
+.icon {
+    display: flex;
+}
+
+footer {
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea {
+    display: block;
+    height: 64px;
+    border-radius: 5px;
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
