--- a/styles/style.css
+++ b/styles/style.css
@@ -223,7 +223,9 @@ footer {
     width: 50%;
 }
 
-footer input[type="text"], footer input[type="email"], footer textarea {
+footer input[type="text"],
+footer input[type="email"],
+footer textarea {
     display: block;
     height: 64px;
     border-radius: 5px;
@@ -233,4 +235,30 @@ footer input[type="text"], footer input[type="email"], footer textarea {
     padding: 10px 20px;
     margin-bottom: 24px;
     border: none;
+}
+
+/* responsive media query */
+.hide {
+    display: none;
+}
+
+@media screen and (max-width: 576px) {
+
+    .skills-container,
+    .resume-container,
+    footer, .about-items {
+        flex-direction: column;
+    }
+
+    footer, .about {
+        padding: 20px;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    footer input[type="text"],
+footer input[type="email"],
+footer textarea{
+    width: calc(100% - 40px);
+}
 }
